CSS height and overflow fixes

--- a/styles/actions-container.css
+++ b/styles/actions-container.css
@@ -2,7 +2,7 @@
 #actions-container {
   width: 100%;
   height: 5.5em;
-  overflow: none;
+  overflow: hidden;
   border: 2px solid black;
   border-bottom: none;
   padding: 3px;
