--- a/styles/details-container.css
+++ b/styles/details-container.css
@@ -45,7 +45,6 @@
 
 @media only screen and (min-width: 30em) {
   #details-container {
-    height: 40vh;
     overflow: hidden;
   }
 
